# lutetia

./: .gitignore  Cargo.toml  PROBLEM.md  README.md  TODO.md
src/: contract.rs  decompiler.rs  errors.rs  expr.rs  folder.rs  function.rs  lib.rs  loader.rs  main.rs  matcher.rs  prettify.rs  rewriter.rs  simplify.rs  sparser.rs  stack.rs  vm.rs  whiles.rs
src/core/: algebra.rs  arithmetic.rs  masks.rs  memloc.rs  mod.rs
src/utils/: helpers.rs  mod.rs  opcodes.rs  signatures.rs
tests/: e2e.rs  integration.rs  unit.rs
tests/e2e/: test_cli.rs
tests/integration/: test_contracts.rs  test_decompiler.rs  test_pipeline.rs  test_robustness.rs
tests/unit/: test_arithmetic.rs  test_expr.rs  test_loader.rs  test_masks.rs  test_matcher.rs  test_opcodes.rs  test_prettify.rs  test_simplify.rs  test_vm.rs
